--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,142 +1,13 @@
 :root {
-  --main-bg-color: magenta;
-  --nav-height: 48px;
-  --sidepanel-width: 180px;
-  --sidepanel-border-width: 10px;
-  --sidepanel-total-width: calc(var(--sidepanel-width) + var(--sidepanel-border-width)*4);
-  --sidepanel-height: calc(100vh - var(--nav-height) - var(--sidepanel-border-width)*2);
-  --content-padding:20px;
-  --content-width: calc(100vw - var(--sidepanel-total-width) - var(--content-padding));
-  --content-height: calc(100vh - var(--nav-height) - var(--content-padding)*2);
-
-
+  /* Global variables */
   /* Colors */
+  --nav-height: 48px;
   --main-fg: #909090;
+  --main-fg: #f1f1f1ef;
   --main-bg: #343434;
-  --nav-active: var(--main-bg);
-  --nav-hover: var(--main-bg);
-  --nav-bg: #eeeeee;
-  --nav-fg: var(--main-bg);
-  --editor-bgcolor: #303030
+  --editor-bgcolor: #303030ef;
+  --editor-bgcolor: #ffffffef;
 }
 body {
   margin:0px;
-}
-.sidePanel {
-  width: var(--sidepanel-width);
-  height: var(--sidepanel-height);
-  border-width: var(--sidepanel-border-width);
-  border-style: double;
-  border-color: var(--main-bg);
-  background-color: var(--main-fg);
-  float:left;
-}
-.content {
-  width: var(--content-width);
-  height: var(--content-height);
-  background-color: var(--main-bg);
-  padding: var(--content-padding);
-  color: #eeeeee;
-  float:left;
-  overflow:auto;
-}
-.topnav {
-  background-color: var(--nav-bg);
-  overflow-x: auto;
-  overflow-y: hidden;
-  height: var(--nav-height);
-  white-space:nowrap;
-}
-.pagelogo {
-  float: left;
-  color: var(--nav-fg);
-  text-align: left;
-  padding: 11px 16px;
-  width:calc(var(--sidepanel-total-width) - 54px);
-  text-decoration: none;
-  font-size: 24px;
-}
-/* Style the links inside the navigation bar */
-.topnavLinks a {
-  float: left;
-  color: var(--nav-fg);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnavLinks a:hover {
-  background-color: #ddd;
-  color: var(--nav-hover);
-}
-
-/* Add a color to the active/current link */
-.topnavLinks a.active {
-  background-color: var(--nav-active);
-  color: white;
-}
-
-button.is-active {
-  background-color:#565656;
-}
-pre {
-  background-color:#232323;
-  border-radius: 0.5rem;
-  padding: 0.75rem 1rem;
-}
-ul, ol {
-  padding: 0 1rem;
-}
-
-.ProseMirror {
-  min-height: 85vh;
-}
-.ProseMirror:focus {
-  outline:none;
-  //padding: 10px;
-}
-.addBook {
-  height: 50px;
-  width: 50px;
-  font-size: 40px;
-}
-.sidePanelButtonActive {
-  color:white;
-  background-color:var(--main-bg);
-  width:100%;
-  text-align:left;
-  height:30px;
-}
-.sidePanelButton {
-  color:black;
-  width:100%;
-  text-align:left;
-  height:30px;
-  background-color: #8f8f8f;
-}
-.homeDiv {
-  background-image:url("../public/background.jpg");
-  background-position:center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: var(--main-bg);
-  width: 100vw;
-  height: calc(100vh - var(--nav-height));
-  background-color: var(--main-bg);
-  color: #eeeeee;
-  overflow:auto;
-}
-.centered {
-  text-align:center;
-}
-.homeContent {
-  margin: auto;
-  border-radius: 0.5rem;
-  background-color:#020202;
-  min-width: 500px;
-  max-width: 60vw;
-  min-height: 91vh;
-  opacity:0.8;
 }
