Lisätty muotoilua ja mahdollisuus piilottaa osa menusta

--- a/frontend/src/components/navigationBar.css
+++ b/frontend/src/components/navigationBar.css
@@ -39,6 +39,7 @@
   float: left;
   color: white;
   background-color: #3f3f3f;
+  background-color: #141414;
   text-align: left;
   padding: 11px 16px;
   width:280px;
