--- a/frontend/src/tasker/styles/Sprint.css
+++ b/frontend/src/tasker/styles/Sprint.css
@@ -5,12 +5,12 @@
   border-style:solid;
   border-width:1px;
   border-color:#333;
-  background-color:#222;
+  //background-color:#222;
   .header{
     height:30px;
     display:flex;
     flex-direction:row;
-    background-color:#888;
+    background-color:#285;
     align-items:center;
     .info {
       color: black;
