--- a/frontend/src/pages/tasker/styles/ProjectCard.css
+++ b/frontend/src/pages/tasker/styles/ProjectCard.css
@@ -1,7 +1,18 @@
 .projectcard {
   width: 300px;
   height: 200px;
-  background-color: #234;
+  background-color: #222;
   padding: 10px;
-  margin: 20px;
+  margin: 10px;
+  border-radius: 25px; 
+  border-style:solid;
+  border-width:1px;
+  border-color:white;
+
+  cursor:pointer;
+
+
+  h1 {
+    margin-top:0px;
+  }
 }
